# tfm

./: .gitignore  .python-version  config.yaml  debug.pcap  fakenos-web.py  huawei_config_generator.py  huawei_smartax.yaml.j2  na_results.csv  pyproject.toml  results.csv  sample.pcap  testing.py
configurations/: config_experiment_1.yaml
experiments/: config_generator.py  execute_all_experiments.sh  generate_graphic_experiment_1_2_3_4.py
experiments/experiment_1/: configuration.yaml.j2  experiment.py  generate_graphics.py  na_results.csv
experiments/experiment_2/: configuration.yaml.j2  experiment.py  generate_graphics.py  na_results.csv  results.csv  script.py
experiments/experiment_3/: configuration.yaml.j2  experiment.py  generate_graphics.py  na_results.csv  results.csv  script.py
experiments/experiment_4/: configuration.yaml.j2  experiment.py  generate_graphics.py  na_results.csv  results.csv  script.py
experiments/experiment_5/: debug_asyncssh.py  debugging-asyncssh.py  fulfill_asyncssh_folder.sh  fulfill_netmiko_folder.sh  fulfill_paramiko_folder.sh  fulfill_scrapli_folder.sh  fulfill_ssh2_python_folder.sh  generate_graphic.py  results.csv  script.py
experiments/experiment_commands/: experiment.py  generate_graphics.py  results.csv  script.py
experiments/experiment_fakenos_resources/: experiment.sh  fulfill_fakenos_folder.sh  fulfill_results_folder.sh  generate_graphic.py  script.py  script.sh
experiments/experiment_multiplatforms/: experiment.py  generate_graphic.py  results.csv  script.py
experiments/experiment_parsers/: display_board.ttp  experiment.py  generate_graphic.py  results.csv  script.py
experiments/experiment_workers/: chaos_monkey.Dockerfile  chaos_monkey.py  chaos_monkey_10_try_2_only_misconfigurations.csv  (+209 more)
results/: experiment_1.csv
templates/: hosts.html
tfm/: .python-version  config.yaml  experiment_1.py  huawei_smartax.py  inventory.yaml  testing.py
(+1675 files in other folders)
