[tool.poetry]
name = "tfm"
version = "0.1.0"
description = ""
authors = ["evilmonkey19 <eperpinyapitarch@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.13"
ntc-templates = { git = "https://github.com/networktocode/ntc-templates.git", rev = "21a5bab7ca5aed2a1224df71bf37b5cc94678742" }
netmiko = "^4.3.0"
fakenos = { path = "../fakenos", develop=true}
jinja2 = "^3.1.4"
pynautobot = "^2.2.0"
wonderwords = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
