[tool.poetry]
name = "tfm"
version = "0.1.0"
description = ""
authors = ["evilmonkey19 <eperpinyapitarch@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
ntc-templates = { path = "../ntc-templates", develop=true }
netmiko = "^4.3.0"
fakenos = { path = "../fakenos-tfm", develop=true}
jinja2 = "^3.1.4"
pynautobot = "^2.2.0"
wonderwords = "^2.2.0"
ttp = "^0.9.5"
python-dotenv = "^1.0.1"
ssh2-python = "^1.0.0"
scrapli-community = "^2024.1.30"
asyncssh = "^2.15.0"
fastapi = "^0.111.1"
celery = {extras = ["redis"], version = "^5.4.0"}
pandas = "^2.2.3"
numpy = "^2.1.3"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
